--- a/src/app/modules/dashboard/detailspage/detailspage.component.html
+++ b/src/app/modules/dashboard/detailspage/detailspage.component.html
@@ -1,1 +1,8 @@
-<p>detailspage works!</p>
+<div ngClass="card mt-2">
+    <div ngClass="card-body">
+      <h5 ngClass="card-title">Id : {{userData.id}}</h5>
+      <h6 ngClass="card-subtitle mb-2 text-muted">User Id : {{userData.userId}}</h6>
+      <p ngClass="card-text">Title :{{userData.title}}</p>
+      <p ngClass="card-text">Body :{{userData.body}}</p>
+    </div>
+  </div>
